--- a/projects/web/translations/messages.es.yaml
+++ b/projects/web/translations/messages.es.yaml
@@ -591,6 +591,12 @@ user:
             title: "Mis Animales Avistados"
             header: "Mis Animales Encontrados"
 
+    sections:
+        under_protection_lost: "Mascotas Bajo Custodia"
+        under_protection_found: "Animales Bajo Custodia"
+        under_protection_message_lost: "Esta mascota está bajo la custodia de la protectora"
+        under_protection_message_found: "Este animal está bajo la custodia de la protectora"
+
     actions:
         edit: "Editar"
         found: "Encontrada"
@@ -599,6 +605,8 @@ user:
         delete: "Eliminar"
         cancel: "Cancelar"
         mark_as_found: "Marcar como Encontrado"
+        under_protection: "Bajo Custodia"
+        remove_under_protection: "Quitar Bajo Custodia"
 
     dates:
         published: "Publicado"
@@ -612,10 +620,16 @@ user:
         archive_title: "Archivar Publicación"
         restore_title: "Restaurar Publicación"
         mark_as_found_title: "Marcar como Encontrado"
+        mark_under_protection_title: "Marcar como Bajo Custodia"
+        remove_under_protection_title: "Quitar Bajo Custodia"
         delete: '¿Estás seguro de que quieres eliminar la publicación de "{name}"? Esta acción no se puede deshacer.'
         archive: '¿Estás seguro de que quieres archivar la publicación de "{name}"? La publicación se ocultará pero podrás restaurarla más tarde.'
         restore: '¿Estás seguro de que quieres restaurar la publicación de "{name}"? La publicación volverá a estar activa.'
         mark_as_found: '¿Estás seguro de que quieres marcar "{name}" como encontrada/reclamada? Esta acción cambiará el estado de la publicación.'
+        mark_under_protection: '¿Estás seguro de que quieres marcar "{name}" como bajo custodia? Esta acción indicará que el animal está bajo la protección de tu organización.'
+        mark_under_protection_base: '¿Estás seguro de que quieres marcar "{name}" como bajo custodia? Esta acción indicará que el animal está bajo la protección de tu organización.'
+        remove_under_protection: '¿Estás seguro de que quieres quitar el estado "Bajo Custodia" a "{name}"? El animal volverá a estar como perdido.'
+        remove_under_protection_base: '¿Estás seguro de que quieres quitar el estado "Bajo Custodia" a "{name}"? El animal volverá a estar como perdido.'
 
     settings:
         title: "Configuración del Perfil"
@@ -662,6 +676,7 @@ flash:
         login_required_restore: "Debes iniciar sesión para restaurar una publicación"
         login_required_delete: "Debes iniciar sesión para eliminar una publicación"
         login_required_mark_found: "Debes iniciar sesión para marcar como encontrada una publicación"
+        login_required_under_protection: "Debes iniciar sesión para marcar como bajo custodia una publicación"
         user_not_found: "Usuario no encontrado"
         account_disabled: "Tu cuenta está desactivada"
         no_permissions: "No tienes permisos para realizar esta acción"
@@ -670,6 +685,8 @@ flash:
         no_permissions_restore: "No tienes permisos para restaurar esta publicación"
         no_permissions_delete: "No tienes permisos para eliminar esta publicación"
         no_permissions_mark_found: "No tienes permisos para marcar como encontrada esta publicación"
+        no_permissions_under_protection: "No tienes permisos para marcar como bajo custodia esta publicación"
+        shelter_required: "Solo las protectoras pueden marcar animales como bajo custodia"
 
     animal:
         not_found: "Animal no encontrado"
@@ -680,11 +697,18 @@ flash:
         deleted_success: "Animal eliminado correctamente"
         updated_success: "Animal actualizado correctamente"
         marked_as_found_success: "Animal marcado como encontrado/reclamado correctamente"
+        marked_under_protection_success: "Animal marcado como bajo custodia correctamente"
         archive_error: "Error al archivar el animal"
         restore_error: "Error al restaurar el animal"
         delete_error: "Error al eliminar el animal"
         update_error: "Error al actualizar el animal"
         mark_as_found_error: "Error al marcar como encontrado el animal"
+        mark_under_protection_error: "Error al marcar como bajo custodia el animal"
         image_error: "Error al procesar la imagen"
         cannot_mark_archived_found: "No se puede marcar como encontrado un animal archivado"
+        cannot_mark_archived_under_protection: "No se puede marcar como bajo custodia un animal archivado"
         already_claimed: "El animal ya ha sido reclamado"
+        already_under_protection: "El animal ya está bajo custodia"
+        removed_under_protection_success: "El animal ya no está bajo custodia."
+        remove_under_protection_error: "Error al quitar el estado bajo custodia del animal."
+        not_under_protection: "El animal no está bajo custodia."
